use UseCGroupMemoryLimitForHeap by default